--- a/dos33.html
+++ b/dos33.html
@@ -6920,11 +6920,11 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     3A8E:8E 9B 33   STX $<span class='n'>339B</span> ; <span class="todo">TODO</span>
                     3A91:4C 7F 33   JMP $<span class='n'>337F</span> ; <span class="todo">TODO</span>
                     === DOS 3.3 ? PATCH ===         </span>
-3A84:00 00 00 00    149             DS  PD2,0       ;Must pad to $XX96              ; *wastes* 18 bytes
-3A88:00 00 00 00                                                                    ; No, no, no!
-3A8C:00 00 00 00                                                                    ; Negative array index OFFSETS like the P6 PROM uses
-3A90:00 00 00 00                                                                    ;
-3A94:00 00
+3A84:00 00 00 00    149             DS  PD2,0       ;Must pad to $XX96              ; [.. <a class='mem' id='_3A84'>*wastes*</a> 18 bytes
+3A88:00 00 00 00                                                                    ;  .. No, no, no!
+3A8C:00 00 00 00                                                                    ;  .. Negative array index OFFSETS like the P6 PROM uses
+3A90:00 00 00 00                                                                    ;  ..
+3A94:00 00                                                                          ;  ..]
 3A96:00 01 98       150             DFB $00,$01,$98                                 ; 96 97 --   *sigh* And the comment that this is the
 3A99:99 02 03       151             DFB $99,$02,$03                                 ; -- 9A 9B   64 disk nibbles of 6&amp;2 Read Table
 3A9C:9C 04 05       152             DFB $9C,$04,$05                                 ; -- 9D 9E   is where again? Comments people, comments!
