--- a/dos33.html
+++ b/dos33.html
@@ -6976,7 +6976,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     198 *                         *                                 ; code at <a class="file" href="#WRITRTN">WRITRTN</a>, Line #<a class='line' href='WRITRTN.080'>>80</a> needs fixing up.
                     199 ***************************                                 ;
                     200 *                                                           ;
-3B00:00 00 00 00    201 <a class="d" name="NBUF1"       >NBUF1       </a>DS 256,0        ;NBUF1                          ; === <a class='ts' href='#T0S5'>T0S5</a> === <a class='disk'>disk</a> sector wasted with zeroes
+3B00:00 00 00 00    201 <a class='d' id='3B00' name='NBUF1'       >NBUF1       </a>DS 256,0        ;NBUF1                          ; === <a class='ts' href='#T0S5'>T0S5</a> === <a class='disk'>disk</a> sector wasted with zeroes
 3B04:00 00 00 00                                                                    ; *sigh* Let's waste an *entire* sector
 3B08:00 00 00 00                                                                    ; with 342 disk nibbles of raw $96 nibbles
 3B0C:00 00 00 00                                                                    ; PLUS the time decoding it
@@ -7951,9 +7951,9 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     177 
                     178 
 <hr>                    179 ******************************                              ; === Page <a class='page' name='page85'>85</a> ===
-                    180 <a class='d' name='AEC2'     >AEC2        </a>EQU *           ;TELL RELOCTR WHERE RWTS ENDS
+                    180 <a class='d' id='3FA8' name='AEC2'     >AEC2        </a>EQU *           ;TELL RELOCTR WHERE RWTS ENDS
                     181 ******************************
-3FA8:00 00 00 00    182 <a class='d' name='FOUND'    >FOUND       </a>DFB 0,0,0,0     'SECTOR FOUND' TABLE            ; See: <a class='x' href='#SECTOK'>SECTOK</a>
+3FA8:00 00 00 00    182 <a class='d' id='3FA8' name='FOUND'    >FOUND       </a>DFB 0,0,0,0     'SECTOR FOUND' TABLE            ; See: <a class='x' href='#SECTOK'>SECTOK</a>
 3FAC:00 00 00 00    183         DFB 0,0,0,0                                         ; <span class='todo'>TODO</span> DOS 3.3 1980 has these as $FF
 3FB0:00 00 00 00    184         DFB 0,0,0,0
 3FB4:00 00 00 00    185         DFB 0,0,0,0
